--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:D5OXygOeTChITSjJZgO0j1FcuW25sSQ7lG9FBU/BljA=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=larablog
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -46,9 +46,9 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
-AUTHOR=techflowing
+AUTHOR=dean
 # 备案
-RECORD=京ICP备20017569号
+RECORD=湘ICP备2021005020号-1
 
 
 # 阿里云OSS配置
